--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -30,11 +30,17 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Display Python version
-      run: python --version
+    - name: Install python dependency
+      run: python -m pip install --upgrade wheel cython setuptools
 
     - name: Build python module
       run: pip wheel unqlite
+
+    - uses: actions/upload-artifact@v2
+      with:
+        name: build_artifact
+        path: "*.whl"
+
 #     - name: Configure CMake
 #       run: cmake -DCMAKE_SYSTEM_VERSION="10.0.19041.0" -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{matrix.config}} -A ${{matrix.toolset}}
       
